gcc/testsuite/rust/rustc/ui/typeck/issue-114918/const-in-fn-return-type_dg.rs
// Regression test for #114918
// Test that a const generic enclosed in a block within a return type
// produces a type mismatch error instead of triggering a const eval cycle

#[allow(unused_braces)]
fn func() -> [u8; { () } ] { // { dg-error ".E0308." "" { target *-*-* } }
    loop {}
}

fn main() {}

